# bangladesh-university-contact-information

./: .gitignore  README.md  analyze.py  check_csv.py  fix_csv.py  fix_csv2.py  pyproject.toml  requirements.txt
data/: university_of_bangladesh.csv
output/: universities_contact.csv
src/scraper/: __init__.py  __main__.py  config.py  models.py
src/scraper/discovery/: website_finder.py
src/scraper/export/: csv_exporter.py
src/scraper/extraction/: email_regex.py  llm_client.py  llm_extractor.py
src/scraper/fetcher/: html_fetcher.py
src/scraper/pipeline/: orchestrator.py
