[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bd-university-scraper"
version = "1.0.0"
description = "Scrape contact info from Bangladeshi university websites"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "duckduckgo_search>=6.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
scraper = "scraper.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
